-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
Type 'make' to build Lustre.
+ make -s
Making all in .
Making all in lustre-iokit
Making all in obdfilter-survey
Making all in sgpdd-survey
Making all in ost-survey
Making all in ior-survey
Making all in mds-survey
Making all in stats-collect
Making all in libcfs
Making all in libcfs
Making all in linux
Making all in util
Making all in include
Making all in libcfs
Making all in linux
Making all in util
Making all in autoconf
Making all in lnet
Making all in lnet
Making all in klnds
Making all in socklnd
Making all in gnilnd
Making all in o2iblnd
Making all in selftest
Making all in doc
Making all in utils
libtool: link: gcc -fPIC -D_GNU_SOURCE -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o routerstat routerstat.o -L. ../../libcfs/libcfs/libcfs.a -lkeyutils
libtool: link: gcc -fPIC -D_GNU_SOURCE -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o lst lst-lst.o -L. -lptlctl ../../libcfs/libcfs/libcfsutil.a ../../libcfs/libcfs/libcfs.a -lkeyutils
libtool: link: gcc -fPIC -D_GNU_SOURCE -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o wirecheck wirecheck.o -L. -lkeyutils
Making all in include
Making all in lnet
Making all in autoconf
Making all in lustre
Making all in include
Making all in lustre
Making all in obdclass
Making all in linux
Making all in ldlm
Making all in ptlrpc
Making all in gss
Making all in obdecho
Making all in mgc
Making all in fid
Making all in fld
Making all in doc
Making all in utils
Making all in gss
libtool: link: gcc -fPIC -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Werror -Wall -Werror -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o lsvcgssd lsvcgssd-context.o lsvcgssd-context_lucid.o lsvcgssd-context_mit.o lsvcgssd-context_heimdal.o lsvcgssd-context_spkm3.o lsvcgssd-gss_util.o lsvcgssd-sk_utils.o lsvcgssd-gss_oids.o lsvcgssd-err_util.o lsvcgssd-lsupport.o lsvcgssd-cacheio.o lsvcgssd-svcgssd.o lsvcgssd-svcgssd_main_loop.o lsvcgssd-svcgssd_mech2file.o lsvcgssd-svcgssd_proc.o ../../../libcfs/libcfs/libcfs.a -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils
libtool: link: gcc -fPIC -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o l_idmap l_idmap.o lsupport.o err_util.o ../../../libcfs/libcfs/libcfs.a -lkeyutils
libtool: link: gcc -fPIC -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Werror -Wall -Werror -D NEW_BUILD -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o lgss_keyring lgss_keyring-lgss_keyring.o lgss_keyring-context.o lgss_keyring-context_lucid.o lgss_keyring-context_mit.o lgss_keyring-context_heimdal.o lgss_keyring-lgss_krb5_utils.o lgss_keyring-lgss_null_utils.o lgss_keyring-lgss_sk_utils.o lgss_keyring-lgss_utils.o lgss_keyring-lsupport.o lgss_keyring-err_util.o lgss_keyring-sk_utils.o ../../../libcfs/libcfs/libcfs.a -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils
libtool: link: gcc -fPIC -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Werror -Wall -Werror -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o lgss_sk lgss_sk-lgss_sk.o lgss_sk-err_util.o lgss_sk-sk_utils.o ../../../libcfs/libcfs/libcfs.a -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils
libtool: compile: gcc DHAVE_CONFIG_H -I. -I../.. -DHAVE_IOCTL_IN_UNISTD_H -I /work/zfs/lib/libspl/include -I /work/zfs/include -include /tmp/rpmbuild-lustresnZ1QS4z/BUILD/lustre-2.8.55/undef.h -include /tmp/rpmbuild-lustresnZ1QS4z/BUILD/lustre-2.8.55/config.h -I/tmp/rpmbuild-lustresnZ1QS4z/BUILD/lustre-2.8.55/libcfs/include -I/tmp/rpmbuild-lustresnZ1QS4z/BUILD/lustre-2.8.55/lnet/include -I/tmp/rpmbuild-lustre-snZ1QS4z/BUILD/lustre-2.8.55/lustre/include -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Werror -Wall -Werror -c mount_utils_zfs.c -fPIC -DPIC -o .libs/mount_osd_zfs_la-mount_utils_zfs.o
mount_utils_zfs.c: In function 'zfs_set_prop_params':
mount_utils_zfs.c:145:17: error: 'ZFS_MAXNAMELEN' undeclared (first use in this function)
char prop_name[ZFS_MAXNAMELEN];
^
mount_utils_zfs.c:145:17: note: each undeclared identifier is reported only once for each function it appears in
mount_utils_zfs.c:145:7: error: unused variable 'prop_name' [-Werror=unused-variable]
char prop_name[ZFS_MAXNAMELEN];
^
mount_utils_zfs.c: In function 'zfs_get_prop_params':
mount_utils_zfs.c:323:11: error: 'ZFS_MAXNAMELEN' undeclared (first use in this function)
char key[ZFS_MAXNAMELEN];
^
mount_utils_zfs.c:323:7: error: unused variable 'key' [-Werror=unused-variable]
char key[ZFS_MAXNAMELEN];
^
cc1: all warnings being treated as errors
make[5]: *** [mount_osd_zfs_la-mount_utils_zfs.lo] Error 1
make[4]: *** [all-recursive] Error 1
make[3]: *** [all-recursive] Error 1
make[2]: *** [all-recursive] Error 1
make[1]: *** [all] Error 2
We need to be able to build either lustre master or Tag: 2.8.55 that has large 16MB RPCs to test Lustre Streaming for CORAL. We need to test it with the latest zfs features which are only in zfs master. However, this is blocking CORAL testing.